[tool.poetry]
name = "sql-alchemy-tutorial"
version = "0.1.0"
description = ""
authors = ["Fernando <lopezcesar292@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
